templates/DestinationRule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: httpbin
  namespace: pedro
spec:
  host: httpbin
  subsets:
    - name: v1
      labels:
        harness.io/track: canary
    - name: v2
      labels:
        harness.io/track: stable
